--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,42 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:orientation="vertical"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+              xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent">
 
-    <TextView
-            android:id="@+id/consoleText"
+    <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="top"
-            android:lines="4"
-            android:scrollbars="vertical"
-            android:textSize="16sp"
-            android:text="Gib hier deinen Text ein"/>
+            android:src="@drawable/jasportc3"
+            android:adjustViewBounds="true"
+            android:scaleType="centerCrop"
+            android:id="@+id/imageView"/>
     <Button
             android:text="connect"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" android:id="@+id/connectButton"/>
+            android:layout_height="80dp"
+            android:id="@+id/connectButton"/>
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    <TextView
-            android:id="@+id/devicesText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="top"
-            android:lines="4"
-            android:scrollbars="vertical"
-            android:textSize="16sp"
-            android:text="Gib hier deinen Text ein"/>
-    <TextView
-            android:id="@+id/peripheralText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="top"
-            android:lines="16"
-            android:scrollbars="vertical"
-            android:textSize="16sp"
-            android:text="Gib hier deinen Text ein"/>
+            android:layout_height="wrap_content"/>
+
 </LinearLayout>
