--- a/app/src/main/res/layout/activity_jasportc3.xml
+++ b/app/src/main/res/layout/activity_jasportc3.xml
@@ -9,13 +9,19 @@
         tools:context=".JaSportC3Activity" android:orientation="vertical">
 
     <TextView
-            android:id="@+id/bikeText"
+            android:id="@+id/bikeSensorData"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="top"
-            android:lines="6"
+            android:lines="5"
             android:scrollbars="vertical"
             android:textSize="16sp"
             android:text="Gib hier deinen Text ein"/>
+
+    <include android:layout_width="match_parent"
+             android:layout_height="0dp"
+             android:layout_weight="1"
+             layout="@layout/fishing_game"
+             android:id="@+id/fishingParent"/>
 
 </LinearLayout>
